maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:101: error: type mismatch;
 found   : List[Int]
 required: Array[Int]
  var indications:Array[Int]=List(getIndication(getX()-1,getY()),
                                 ^JediEscaper:119: error: not found: value indication
  if (minimum==indication(1))                                                                 {
               ^